--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             appData.groups.forEach((group, index) => {
                 const op1 = document.createElement('option');
                 op1.value = index;
-                op1.textContent = `${group.name} (${group.files.length}曲)`;
+                op1.textContent = `${group.name} (${group.files.length}個)`;
                 mainGroupSelect.appendChild(op1);
 
                 const op2 = document.createElement('option');
