--- a/index.html
+++ b/index.html
@@ -271,8 +271,9 @@
         const defaultData = {
             files: ["breach.mp3", "kayo.mp3", "phoenix.mp3", "skye.mp3", "yoru.mp3"],
             groups: [
-                { name: "全て", files: ["剣で斬る1.mp3","剣で斬る2.mp3", "剣で斬る3.mp3", "剣で斬る4.mp3"] },
-                { name: "イニシエーター", files: ["breach.mp3", "kayo.mp3", "phoenix.mp3", "skye.mp3", "yoru.mp3"] },
+                { name: "全て", files: ["breach.mp3", "kayo.mp3", "phoenix.mp3", "skye.mp3", "yoru.mp3"] },
+                { name: "イニシエーター", files: ["breach.mp3", "kayo.mp3", "skye.mp3"] },
+                { name: "デュエリスト", files: ["phoenix.mp3", "yoru.mp3"] },
                 { name: "breach", files: ["breach.mp3"] },
                 { name: "kayo", files: ["kayo.mp3"] },
                 { name: "phoenix", files: ["phoenix.mp3"] },
