--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ランダムサウンド再生システム (Auto MP3)</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="system/style.css">
 </head>
 <body>
 
@@ -133,6 +133,6 @@
 
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="system/app.js"></script>
 </body>
 </html>
